Fixed text overflow problem.

--- a/src/Dlighthouse/media/dndDefault.css
+++ b/src/Dlighthouse/media/dndDefault.css
@@ -96,6 +96,7 @@
 }
 
 #selectedRoutines .routineInfo {
+	overflow: hidden;
 	display: none;
 }
 
